--- a/src/server/components/LibrarySidebar.scss
+++ b/src/server/components/LibrarySidebar.scss
@@ -8,6 +8,7 @@
 	{
 		border-right: 1px solid #374151; // Tailwind Gray 700
 
+		width: 350px;
 		height: 100%;
 
 		overflow-y: scroll;
